# OsuWebEngine

./: .gitignore  Cargo.toml  deny.toml
.github/workflows/: ci.yml
crates/osu-engine/: Cargo.toml
crates/osu-engine-bench/: Cargo.toml
crates/osu-engine-bench/benches/: engine_benchmarks.rs
crates/osu-engine-wasm/: Cargo.toml
crates/osu-engine-wasm/src/: lib.rs
crates/osu-engine/examples/: gen_osr_fixture.rs
crates/osu-engine/fuzz/: Cargo.toml
crates/osu-engine/fuzz/fuzz_targets/: fuzz_osr_parse.rs  fuzz_osu_parse.rs
crates/osu-engine/src/: error.rs  lib.rs  version.rs
crates/osu-engine/src/engine/: index.rs  mod.rs  query.rs  snapshot.rs
crates/osu-engine/src/math/: bezier.rs  catmull.rs  circular_arc.rs  constants.rs  curves.rs  mod.rs  slider_path.rs  trunc.rs  vec2.rs
crates/osu-engine/src/model/: beatmap.rs  hit_object.rs  mod.rs  mods.rs  replay.rs
crates/osu-engine/src/parser/: binary.rs  lzma.rs  mod.rs  osr.rs  osu.rs
crates/osu-engine/src/pipeline/: judgement.rs  mod.rs  score.rs  visibility.rs
crates/osu-engine/src/preprocess/: difficulty.rs  mod.rs  slider_paths.rs  stacking.rs
crates/osu-engine/tests/: parser_fixtures.rs  parser_security.rs
docs/: ADR_Registry.md  API_Specification.md  Architecture_Design_Document.md  BRD.md  Developer_Guide.md  Implementation_Plan.md  Security_Threat_Model.md  Technical_Design_Document.md  Test_Plan.md
docs/L0-ImplementationPlan/: L0.md
docs/L1-ImplementationPlan/: L1.md
docs/L2-ImplementationPlan/: L2.md
npm/: package.json  tsconfig.json
tests/fixtures/: README.md
tests/fixtures/beatmaps/: .gitkeep  collinear_p.osu  early_v4.osu  high_sv_changes.osu  normal.osu  spinner_only.osu  zero_length_slider.osu
tests/fixtures/malformed/: huge_string.osr  invalid_magic.osr  lzma_bomb.osr  missing_sections.osu  nan_timing.osu  negative_coords.osu  truncated.osr
tests/fixtures/replays/: .gitkeep  ancient_2011.osr  dthr_fc.osr  nomod_fc.osr  old_format_2013.osr
