[workspace]
resolver = "2"
members = [
    "crates/osu-engine",
    "crates/osu-engine-wasm",
    "crates/osu-engine-bench",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/user/OsuWeb"

[workspace.dependencies]
# Serialization
serde = { version = "=1.0.219", features = ["derive"] }
serde_json = "=1.0.140"

# LZMA decompression (.osr replay data)
lzma-rs = "=0.3.0"

# WASM bindings
wasm-bindgen = "=0.2.100"
js-sys = "=0.3.77"

# WASM serialization at boundary
serde-wasm-bindgen = "=0.6.5"

# Testing
pretty_assertions = "=1.4.1"

# Benchmarking
criterion = { version = "=0.5.1", features = ["html_reports"] }

[profile.release]
opt-level = "s"        # Optimize for size (WASM binary budget)
lto = true             # Link-time optimization
codegen-units = 1      # Single codegen unit for best optimization
strip = true           # Strip debug symbols
