[package]
name = "osu-engine"
description = "Pure Rust osu! Standard mode game logic engine"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
serde.workspace = true
lzma-rs.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
proptest.workspace = true
serde_json.workspace = true
