[package]
name = "osu-engine-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

# Deliberately NOT a member of the root workspace. cargo-fuzz builds this crate
# with its own RUSTFLAGS (sanitizer coverage, ASan) which must not leak into the
# main build, and libfuzzer-sys requires a nightly toolchain. An empty
# [workspace] table makes this its own workspace root.
[workspace]

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
osu-engine = { path = ".." }

[[bin]]
name = "fuzz_osr_parse"
path = "fuzz_targets/fuzz_osr_parse.rs"
test = false
doc = false

[[bin]]
name = "fuzz_osu_parse"
path = "fuzz_targets/fuzz_osu_parse.rs"
test = false
doc = false
